tests/snapshots/rendering__code_block_highlights_rust.snap
---
source: tests/rendering.rs
expression: "render(\"```rust\\n// comment\\nlet x: u32 = 42;\\n```\")"
---
  [fg2]//[/color][fg2] comment[/color]
  [fg5]let[/color] x: [fg5]u32[/color] [fg5]=[/color] [code]42[/color];
