tests/snapshots/rendering__code_block_unknown_language_falls_back_to_code_color.snap
---
source: tests/rendering.rs
expression: "render(\"```foobar\\nsome text\\n```\")"
---
[code]  some text
[/color]
