tests/snapshots/rendering__code_block_with_language.snap
---
source: tests/rendering.rs
expression: "render(\"```rust\\nlet x = 42;\\n```\")"
---
  [fg5]let[/color] x [fg5]=[/color] [code]42[/color];
